# xmc4800_ethercat_example

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
libs/cmakes/cmsis_core/: CMakeLists.txt
libs/cmakes/soes/: CMakeLists.txt
libs/cmakes/xmc4800_lib/: CMakeLists.txt
src/: CMakeLists.txt  main.c
